<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccelerationAlert</string>
    <string name="action_settings">Settings</string>
    <string name="action_config">Configuration</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="filter_help">Help</string>
    <string name="acceleration_name">Acceleration</string>
    <string name="input_name">Input</string>
    <string name="sensor_name">Sensor</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="log_data_label">Log Data</string>
    <string name="default_value">0.00</string>
    <string name="default_int_value">0</string>
    <string name="label_threshold_max">Max Threshold:</string>
    <string name="label_threshold_min">Min Threshold:</string>
    <string name="label_set">Set Values</string>
    <string name="label_max_threshold">Max Threshold:</string>
    <string name="label_min_threshold">Min Threshold:</string>
    <string name="label_max_threshold_count">Max Threshold Count:</string>
    <string name="label_max_count">Max Count:</string>
    <string name="label_min_threshold_count">Min Threshold Count:</string>
    <string name="label_min_count">Min Count:</string>
    <string name="label_lpf_alpha">LPF Alpha:</string>
    <string name="label_sensor_frequency">Sensor Hz:</string>
    <string name="label_event_count_0">0.2 G:</string>
    <string name="label_event_count_1">0.3 G:</string>
    <string name="label_event_count_2">0.4 G:</string>
    <string name="label_event_count_3">0.5+ G:</string>

</resources>