<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" >

                    <TextView
                        android:id="@+id/label_filter_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/acceleration_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_orange" />

                    <TextView
                        android:id="@+id/label_filter_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/label_filter_name"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/sensor_name"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" >

                    <TableLayout
                        android:id="@+id/table_statistics_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:id="@+id/table_statistics_left_row_0"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dip" >

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_x_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="X:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_x_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_x_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_y_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="Y:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_y_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_y_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_z_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="Z:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_z_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_z_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>
                        </TableRow>
                    </TableLayout>
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot_sensor"
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                title="Acceleration" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/color_bar" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" >

                        <ImageView
                            android:id="@+id/image_developer_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:src="@drawable/ke_icon" />

                        <TextView
                            android:id="@+id/label_developer_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/image_developer_icon"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/developer_url"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/color_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" >

                        <ImageView
                            android:id="@+id/image_color_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/color_bar" />
                    </RelativeLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/start_button_background"
                    android:text="Start"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_max_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/label_max_threshold"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_max_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/label_max_threshold"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/label_max_threshold"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_min_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_min_threshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/value_min_threshold"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/value_min_threshold"
                    android:text="@string/label_min_threshold"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_max_threshold_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_max_threshold"
                    android:layout_marginLeft="5dp"
                    android:text="@string/label_max_count"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_max_threshold_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/value_max_threshold"
                    android:layout_below="@+id/value_max_threshold"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_min_threshold_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/label_min_threshold"
                    android:layout_below="@+id/label_min_threshold"
                    android:text="@string/label_min_count"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_min_threshold_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/label_min_threshold_count"
                    android:layout_alignBottom="@+id/label_min_threshold_count"
                    android:layout_toRightOf="@+id/label_min_threshold"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_lpf_alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_max_threshold_count"
                    android:layout_marginLeft="5dp"
                    android:text="@string/label_lpf_alpha"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_lpf_alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/label_lpf_alpha"
                    android:layout_alignBottom="@+id/label_lpf_alpha"
                    android:layout_alignLeft="@+id/value_max_threshold_count"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/label_sensor_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/value_lpf_alpha"
                    android:layout_alignBottom="@+id/value_lpf_alpha"
                    android:layout_alignLeft="@+id/label_min_threshold_count"
                    android:text="@string/label_sensor_frequency"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/value_sensor_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/label_sensor_frequency"
                    android:layout_alignBottom="@+id/label_sensor_frequency"
                    android:layout_toRightOf="@+id/label_min_threshold"
                    android:text="@string/default_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>